Kubernates_Manifest_Examples/Manifest_Examples/deployment_strategies/bg-canary-example/green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: green
  template:
    metadata:
      labels:
        app: my-app
        version: green
    spec:
      containers:
      - name: my-app
        image: narayanacharan/nginx-app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-green
spec:
  selector:
    app: my-app
    version: green
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
