Kubernates_Manifest_Examples/Manifest_Examples/deployment_strategies/bg-canary-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: my-app.nextopsvideos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-blue #nginx-app:old
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: my-app-green #nginx-app:latest
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: my-app.nextopsvideos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-canary #nginx-app:latest
            port:
              number: 80
